--- a/1_Task_Managment_App.ipynb
+++ b/1_Task_Managment_App.ipynb
@@ -1,256 +1,166 @@
-{
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d8f0da6a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1. Add a task\n",
-      "2. View tasks\n",
-      "3. Update a task\n",
-      "4. Delete a task\n",
-      "5. Exit\n",
-      "Enter your choice: 1\n",
-      "Enter task title: check if app working\n",
-      "Enter task description: place text check if wqorking\n",
-      "Enter due date (YYYY-MM-DD): 2024-03-10\n",
-      "Task added successfully!\n",
-      "1. Add a task\n",
-      "2. View tasks\n",
-      "3. Update a task\n",
-      "4. Delete a task\n",
-      "5. Exit\n",
-      "Enter your choice: 2\n",
-      "1. Title: check if app working, Description: place text check if wqorking, Due Date: 2024-03-10\n",
-      "1. Add a task\n",
-      "2. View tasks\n",
-      "3. Update a task\n",
-      "4. Delete a task\n",
-      "5. Exit\n",
-      "Enter your choice: 3\n",
-      "1. Title: check if app working, Description: place text check if wqorking, Due Date: 2024-03-10\n",
-      "Enter the task number to update: 1\n",
-      "Enter updated task title: Update task title\n",
-      "Enter updated task description: check if app working\n",
-      "Enter updated due date (YYYY-MM-DD): 2024-03-10\n",
-      "Task updated successfully!\n",
-      "1. Add a task\n",
-      "2. View tasks\n",
-      "3. Update a task\n",
-      "4. Delete a task\n",
-      "5. Exit\n",
-      "Enter your choice: 5\n",
-      "Exiting the task manager.\n",
-      "1. Add a task\n",
-      "2. View tasks\n",
-      "3. Update a task\n",
-      "4. Delete a task\n",
-      "5. Exit\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Developing a simple console-based task management application that allows users to add, view, update, and delete tasks. Tasks will be stored in a text file.\n",
-    "import os\n",
-    "import datetime\n",
-    "\n",
-    "# Function to load tasks from a file\n",
-    "def load_tasks():\n",
-    "    \"\"\"Load tasks from a file.\"\"\"\n",
-    "    tasks = []\n",
-    "\n",
-    "    # Check if the tasks file exists\n",
-    "    if os.path.exists(\"tasks.txt\"):\n",
-    "        # Open the tasks file in read mode\n",
-    "        with open(\"tasks.txt\", \"r\") as file:\n",
-    "            # Read each line in the file\n",
-    "            for line in file:\n",
-    "                # Split the line into a list using commas as separators\n",
-    "                task = line.strip().split(\",\")\n",
-    "                # Append the task to the tasks list\n",
-    "                tasks.append(task)\n",
-    "    \n",
-    "    return tasks\n",
-    "\n",
-    "# Function to save tasks to a file\n",
-    "def save_tasks(tasks):\n",
-    "    \"\"\"Save tasks to a file.\"\"\"\n",
-    "    # Open the tasks file in write mode\n",
-    "    with open(\"tasks.txt\", \"w\") as file:\n",
-    "        # Iterate through each task in the tasks list\n",
-    "        for task in tasks:\n",
-    "            # Write the task as a comma-separated string to the file\n",
-    "            file.write(\",\".join(task) + \"\\n\")\n",
-    "\n",
-    "# Function to display the menu\n",
-    "def display_menu():\n",
-    "    \"\"\"Display the menu options for the user.\"\"\"\n",
-    "    # Print the menu options\n",
-    "    print(\"1. Add a task\")\n",
-    "    print(\"2. View tasks\")\n",
-    "    print(\"3. Update a task\")\n",
-    "    print(\"4. Delete a task\")\n",
-    "    print(\"5. Exit\")\n",
-    "\n",
-    "# Function to add a new task\n",
-    "def add_task(tasks):\n",
-    "    \"\"\"Allow the user to add a new task.\"\"\"\n",
-    "    # Get user input for task details\n",
-    "    title = input(\"Enter task title: \")\n",
-    "    description = input(\"Enter task description: \")\n",
-    "    due_date = input(\"Enter due date (YYYY-MM-DD): \")\n",
-    "\n",
-    "    # Validate the date format\n",
-    "    try:\n",
-    "        datetime.datetime.strptime(due_date, \"%Y-%m-%d\")\n",
-    "    except ValueError:\n",
-    "        print(\"Invalid date format. Please use YYYY-MM-DD.\")\n",
-    "        return\n",
-    "\n",
-    "    # Append the new task to the tasks list\n",
-    "    tasks.append([title, description, due_date])\n",
-    "    # Save the updated tasks to the file\n",
-    "    save_tasks(tasks)\n",
-    "    print(\"Task added successfully!\")\n",
-    "\n",
-    "# Function to view all tasks\n",
-    "def view_tasks(tasks):\n",
-    "    \"\"\"Display all tasks.\"\"\"\n",
-    "    # Check if there are no tasks\n",
-    "    if not tasks:\n",
-    "        print(\"No tasks available.\")\n",
-    "    else:\n",
-    "        # Iterate through each task and display its details\n",
-    "        for i, task in enumerate(tasks):\n",
-    "            print(f\"{i + 1}. Title: {task[0]}, Description: {task[1]}, Due Date: {task[2]}\")\n",
-    "\n",
-    "# Function to update a task\n",
-    "def update_task(tasks):\n",
-    "    \"\"\"Allow the user to update a task.\"\"\"\n",
-    "    # Display the current tasks\n",
-    "    view_tasks(tasks)\n",
-    "    # Get user input for the task to update\n",
-    "    task_id = input(\"Enter the task number to update: \")\n",
-    "\n",
-    "    try:\n",
-    "        # Convert the task_id to an integer\n",
-    "        task_id = int(task_id)\n",
-    "        # Check if the task_id is within the valid range\n",
-    "        if 1 <= task_id <= len(tasks):\n",
-    "            # Get user input for the updated task details\n",
-    "            title = input(\"Enter updated task title: \")\n",
-    "            description = input(\"Enter updated task description: \")\n",
-    "            due_date = input(\"Enter updated due date (YYYY-MM-DD): \")\n",
-    "\n",
-    "            # Validate the date format\n",
-    "            try:\n",
-    "                datetime.datetime.strptime(due_date, \"%Y-%m-%d\")\n",
-    "            except ValueError:\n",
-    "                print(\"Invalid date format. Please use YYYY-MM-DD.\")\n",
-    "                return\n",
-    "\n",
-    "            # Update the task in the tasks list\n",
-    "            tasks[task_id - 1] = [title, description, due_date]\n",
-    "            # Save the updated tasks to the file\n",
-    "            save_tasks(tasks)\n",
-    "            print(\"Task updated successfully!\")\n",
-    "        else:\n",
-    "            print(\"Invalid task number.\")\n",
-    "    except ValueError:\n",
-    "        print(\"Invalid input. Please enter a valid task number.\")\n",
-    "\n",
-    "# Function to delete a task\n",
-    "def delete_task(tasks):\n",
-    "    \"\"\"Allow the user to delete a task.\"\"\"\n",
-    "    # Display the current tasks\n",
-    "    view_tasks(tasks)\n",
-    "    # Get user input for the task to delete\n",
-    "    task_id = input(\"Enter the task number to delete: \")\n",
-    "\n",
-    "    try:\n",
-    "        # Convert the task_id to an integer\n",
-    "        task_id = int(task_id)\n",
-    "        # Check if the task_id is within the valid range\n",
-    "        if 1 <= task_id <= len(tasks):\n",
-    "            # Delete the task from the tasks list\n",
-    "            del tasks[task_id - 1]\n",
-    "            # Save the updated tasks to the file\n",
-    "            save_tasks(tasks)\n",
-    "            print(\"Task deleted successfully!\")\n",
-    "        else:\n",
-    "            print(\"Invalid task number.\")\n",
-    "    except ValueError:\n",
-    "        print(\"Invalid input. Please enter a valid task number.\")\n",
-    "\n",
-    "# Main function\n",
-    "def main():\n",
-    "    \"\"\"Main function to run the task manager.\"\"\"\n",
-    "    # Load existing tasks from the file\n",
-    "    tasks = load_tasks()\n",
-    "\n",
-    "    while True:\n",
-    "        # Display the menu\n",
-    "        display_menu()\n",
-    "        # Get user input for the menu choice\n",
-    "        choice = input(\"Enter your choice: \")\n",
-    "\n",
-    "        # Perform the corresponding action based on the user's choice\n",
-    "        if choice == \"1\":\n",
-    "            add_task(tasks)\n",
-    "        elif choice == \"2\":\n",
-    "            view_tasks(tasks)\n",
-    "        elif choice == \"3\":\n",
-    "            update_task(tasks)\n",
-    "        elif choice == \"4\":\n",
-    "            delete_task(tasks)\n",
-    "        elif choice == \"5\":\n",
-    "            print(\"Exiting the task manager.\")\n",
-    "            break\n",
-    "        else:\n",
-    "            print(\"Invalid choice. Please enter a number between 1 and 5.\")\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Run the main function when the script is executed\n",
-    "    main()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    # Run the main function when the script is executed\n",
-    "    main()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "544f408f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.9.13"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+#  Project Scope Task Management App
+# This code provides a console-based task management application with the following features:
+   # Add, view, update, and delete tasks.
+   # Load tasks from and save tasks to a text file for persistence.
+   # Input validation for date format and task numbers.
+   # Enhanced user interface with a clear menu display.
+   # Modular functions for each task operation.
+   # Main function to orchestrate the task management process.
+   # menu option (6. Test application) that calls the test_application() function when selected. 
+   # This allows users to verify if the application is functioning correctly
+
+
+
+import os
+import datetime
+
+# Function to load tasks from a file
+def load_tasks():
+    """Load tasks from a file."""
+    tasks = []
+
+    if os.path.exists("tasks.txt"):
+        with open("tasks.txt", "r") as file:
+            for line in file:
+                task = line.strip().split(",")
+                tasks.append(task)
+    
+    return tasks
+
+# Function to save tasks to a file
+def save_tasks(tasks):
+    """Save tasks to a file."""
+    with open("tasks.txt", "w") as file:
+        for task in tasks:
+            file.write(",".join(task) + "\n")
+
+# Function to display the menu
+def display_menu():
+    """Display the menu options for the user."""
+    print("1. Add a task")
+    print("2. View tasks")
+    print("3. Update a task")
+    print("4. Delete a task")
+    print("5. Exit")
+    print("6. Test application")
+
+# Function to add a new task
+def add_task(tasks):
+    """Allow the user to add a new task."""
+    title = input("Enter task title: ")
+    description = input("Enter task description: ")
+    due_date = input("Enter due date (YYYY-MM-DD): ")
+
+    try:
+        datetime.datetime.strptime(due_date, "%Y-%m-%d")
+    except ValueError:
+        print("Invalid date format. Please use YYYY-MM-DD.")
+        return
+
+    tasks.append([title, description, due_date])
+    save_tasks(tasks)
+    print("Task added successfully!")
+
+# Function to view all tasks
+def view_tasks(tasks):
+    """Display all tasks."""
+    if not tasks:
+        print("No tasks available.")
+    else:
+        for i, task in enumerate(tasks):
+            print(f"{i + 1}. Title: {task[0]}, Description: {task[1]}, Due Date: {task[2]}")
+
+# Function to update a task
+def update_task(tasks):
+    """Allow the user to update a task."""
+    view_tasks(tasks)
+    task_id = input("Enter the task number to update: ")
+
+    try:
+        task_id = int(task_id)
+        if 1 <= task_id <= len(tasks):
+            title = input("Enter updated task title: ")
+            description = input("Enter updated task description: ")
+            due_date = input("Enter updated due date (YYYY-MM-DD): ")
+
+            try:
+                datetime.datetime.strptime(due_date, "%Y-%m-%d")
+            except ValueError:
+                print("Invalid date format. Please use YYYY-MM-DD.")
+                return
+
+            tasks[task_id - 1] = [title, description, due_date]
+            save_tasks(tasks)
+            print("Task updated successfully!")
+        else:
+            print("Invalid task number.")
+    except ValueError:
+        print("Invalid input. Please enter a valid task number.")
+
+# Function to delete a task
+def delete_task(tasks):
+    """Allow the user to delete a task."""
+    view_tasks(tasks)
+    task_id = input("Enter the task number to delete: ")
+
+    try:
+        task_id = int(task_id)
+        if 1 <= task_id <= len(tasks):
+            del tasks[task_id - 1]
+            save_tasks(tasks)
+            print("Task deleted successfully!")
+        else:
+            print("Invalid task number.")
+    except ValueError:
+        print("Invalid input. Please enter a valid task number.")
+
+# Function to test the task management application
+def test_application():
+    """Test the task management application."""
+    tasks = load_tasks()
+
+    tasks.append(["Test Task", "This is a test task", "2024-12-31"])
+    save_tasks(tasks)
+
+    print("All tasks after adding a test task:")
+    view_tasks(tasks)
+
+    tasks[0] = ["Updated Test Task", "This is an updated test task", "2024-12-30"]
+    save_tasks(tasks)
+
+    print("\nAll tasks after updating the test task:")
+    view_tasks(tasks)
+
+    del tasks[0]
+    save_tasks(tasks)
+
+    print("\nAll tasks after deleting the test task:")
+    view_tasks(tasks)
+
+# Main function
+def main():
+    """Main function to run the task manager."""
+    tasks = load_tasks()
+
+    while True:
+        display_menu()
+        choice = input("Enter your choice: ")
+
+        if choice == "1":
+            add_task(tasks)
+        elif choice == "2":
+            view_tasks(tasks)
+        elif choice == "3":
+            update_task(tasks)
+        elif choice == "4":
+            delete_task(tasks)
+        elif choice == "5":
+            print("Exiting the task manager.")
+            break
+        elif choice == "6":
+            test_application()
+        else:
+            print("Invalid choice. Please enter a number between 1 and 6.")
+
+if __name__ == "__main__":
+    main()
